updated sample data to use public domain NOAA tide data

--- a/simpleJsonTree/index.html
+++ b/simpleJsonTree/index.html
@@ -14,7 +14,7 @@
   
   <script type="text/javascript">
     $(document).ready(function () {
-      $("#target").jsonTree(countriesResponse);
+      $("#target").jsonTree(sampleData);
     });
   </script>
 </html>
